--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,13 +55,17 @@ default:
       policy: $CODEGEN_CACHE_POLICY
   before_script:
     - export PATH="$PWD/node_modules/.bin:$PATH"
-    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ] || [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export NX_BASE=$(git log origin/$CI_COMMIT_BRANCH --first-parent --merges -n 1 --skip 1 --format=%H); fi
+    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ] || [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then
+      export NX_BASE=$(git log origin/$CI_COMMIT_BRANCH --first-parent --merges -n 1 --skip 1
+      --format=%H); fi
     # registry logins
-    - echo "$CI_DEPENDENCY_PROXY_PASSWORD" | docker login $CI_DEPENDENCY_PROXY_SERVER -u $CI_DEPENDENCY_PROXY_USER --password-stdin
+    - echo "$CI_DEPENDENCY_PROXY_PASSWORD" | docker login $CI_DEPENDENCY_PROXY_SERVER -u
+      $CI_DEPENDENCY_PROXY_USER --password-stdin
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     # buildx builder
     - docker network create --driver=bridge builder-network
-    - docker buildx create --use --driver-opt network=builder-network --driver-opt image=${DOCKER_PROXY}/moby/buildkit:buildx-stable-1 --bootstrap
+    - docker buildx create --use --driver-opt network=builder-network --driver-opt
+      image=${DOCKER_PROXY}/moby/buildkit:buildx-stable-1 --bootstrap
 
 build workspace image:
   stage: workspace
@@ -69,8 +73,13 @@ build workspace image:
   cache: []
   script:
     - docker info
-    - docker buildx build --network=host --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION} -f packages/workspace/base/Dockerfile --build-arg DOCKER_PROXY=${DOCKER_PROXY} --platform=linux/arm64 .
-    - docker buildx build --network=host --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION} -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --build-arg DOCKER_PROXY=${DOCKER_PROXY} --platform=linux/arm64 .
+    - docker buildx build --network=host --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION}
+      -f packages/workspace/base/Dockerfile --build-arg DOCKER_PROXY=${DOCKER_PROXY}
+      --platform=linux/arm64 .
+    - docker buildx build --network=host --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION} -f
+      packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg
+      PROJECT_VERSION=${PROJECT_VERSION} --build-arg DOCKER_PROXY=${DOCKER_PROXY}
+      --platform=linux/arm64 .
   resource_group: single
 
 install deps:
@@ -86,7 +95,9 @@ generate env files:
   variables:
     ENV_CACHE_POLICY: push
   script:
-    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then export STAGE=PROD; elif [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export STAGE=TEST,PROD; else export STAGE=DEV,TEST,PROD; fi
+    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then export STAGE=PROD; elif [
+      "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export STAGE=TEST,PROD; else export
+      STAGE=DEV,TEST,PROD; fi
     - nx g env-files ${STAGE} ${BITWARDEN_USER} ${BITWARDEN_PASSWORD}
   resource_group: single
 
@@ -167,6 +178,10 @@ workspace security:
 lighthouse:
   stage: analyze
   script:
+    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then export STAGE=PROD; elif [
+      "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export STAGE=TEST,PROD; else export
+      STAGE=DEV,TEST,PROD; fi
+    - nx g env-files LIGHTHOUSE,${STAGE} ${BITWARDEN_USER} ${BITWARDEN_PASSWORD}
     - nx affected -t lighthouse --parallel=1
   artifacts:
     paths:
@@ -177,7 +192,8 @@ lighthouse:
 deploy:
   stage: deploy
   script:
-    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then nx affected -t deploy; else nx affected -t deploy -c development; fi
+    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then nx affected -t deploy; else nx affected -t
+      deploy -c development; fi
   only:
     - master
     - develop
