feat(just-mail): add additional san

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -154,6 +154,7 @@ secrets:
       - SOGO_EXPIRE_SESSION
       - WEBAUTHN_ONLY_TRUSTED_VENDORS
       - DISABLE_NETFILTER_ISOLATION_RULE
+      - ADDITIONAL_SAN
 
   mlflow:
     prefix: true
