--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -73,6 +73,7 @@ server {
     server_name cms.justinkonratt.de;
 
     location / {
+        client_max_body_size 100M;
         set $upstream cms:$cms_port;
         proxy_pass http://$upstream;
     }
