--- a/package.json
+++ b/package.json
@@ -1,160 +1,167 @@
 {
-    "name": "monorepo",
-    "type": "module",
-    "version": "0.0.0",
-    "private": true,
-    "description": "Monorepo of Justin Konratt",
-    "author": {
-        "name": "Justin Konratt",
-        "email": "codesdowork@gmail.com",
-        "url": "https://github.com/CodesDoWork"
-    },
-    "license": "MIT",
-    "homepage": "https://github.com/CodesDoWork/monorepo",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/CodesDoWork/monorepo.git"
-    },
-    "bugs": {
-        "url": "https://github.com/CodesDoWork/monorepo/issues",
-        "email": "codesdowork@gmail.com"
-    },
-    "keywords": [
-        "nx",
-        "monorepo",
-        "codesdowork"
-    ],
-    "scripts": {
-        "docker:build-workspace": "nx run-many -t docker-build -p workspace-base workspace workspace-deps --parallel 1 --nxBail --output-style stream",
-        "docker:workspace": "nx docker-compose-up workspace",
-        "secretlint": "secretlint --secretlintignore .gitignore \"**/*\"",
-        "trivy": "tsx packages/workspace/scripts/src/trivy-analyze-fs.ts"
-    },
-    "dependencies": {
-        "@mermaid-js/mermaid-mindmap": "^9.3.0",
-        "@nx/devkit": "20.4.6",
-        "@parcel/watcher": "^2.5.1",
-        "@swc/helpers": "0.5.17",
-        "@t3-oss/env-core": "^0.11.0",
-        "@tailwindcss/forms": "^0.5.10",
-        "axios": "^1.7.4",
-        "classnames": "^2.5.1",
-        "clsx": "^2.1.1",
-        "color": "^4.2.3",
-        "dotenv": "^16.4.7",
-        "encoding": "^0.1.13",
-        "iconify-icon": "^2.3.0",
-        "mermaid": "~9.1.7",
-        "moment": "^2.30.1",
-        "pino": "^9.4.0",
-        "tslib": "^2.6.3",
-        "vitepress-plugin-auto-sidebar": "^1.2.0",
-        "vitepress-plugin-mermaid": "2.0.17",
-        "vue": "^3.4.38",
-        "xmlbuilder2": "^3.1.1",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@antfu/eslint-config": "^4.13.0",
-        "@apollo/client": "^3.13.8",
-        "@astrojs/tailwind": "^5.1.5",
-        "@cloudflare/kv-asset-handler": "^0.3.4",
-        "@cloudflare/workers-types": "^4.20250510.0",
-        "@directus/extensions-sdk": "^12.1.4",
-        "@directus/types": "^12.2.2",
-        "@graphql-codegen/cli": "^5.0.6",
-        "@graphql-codegen/introspection": "^4.0.3",
-        "@graphql-codegen/plugin-helpers": "^5.1.0",
-        "@graphql-codegen/typescript": "^4.1.6",
-        "@graphql-codegen/typescript-operations": "^4.6.1",
-        "@iconify/svelte": "^4.2.0",
-        "@nx/esbuild": "20.4.6",
-        "@nx/eslint": "20.4.6",
-        "@nx/eslint-plugin": "20.4.6",
-        "@nx/js": "20.4.6",
-        "@nx/node": "20.4.6",
-        "@nx/plugin": "20.4.6",
-        "@nx/vite": "20.4.6",
-        "@nx/web": "20.4.6",
-        "@nx/workspace": "20.4.6",
-        "@prettier/plugin-xml": "^3.4.1",
-        "@secretlint/secretlint-rule-preset-recommend": "^8.2.4",
-        "@sveltejs/adapter-node": "^5.2.12",
-        "@sveltejs/kit": "^2.20.8",
-        "@sveltejs/vite-plugin-svelte": "^5.0.3",
-        "@swc-node/register": "1.10.10",
-        "@swc/cli": "0.7.5",
-        "@swc/core": "1.11.24",
-        "@testing-library/react": "16.3.0",
-        "@types/color": "^4.2.0",
-        "@types/eslint-plugin-tailwindcss": "^3.17.0",
-        "@types/node": "^22.15.17",
-        "@types/node-cron": "^3.0.11",
-        "@types/pg": "^8.15.1",
-        "@typescript-eslint/parser": "^8.32.0",
-        "@vitest/coverage-v8": "^2.1.9",
-        "@vitest/ui": "^2.1.9",
-        "astro": "^4.16.18",
-        "autoprefixer": "^10.4.21",
-        "chalk": "4.1.2",
-        "copyfiles": "^2.4.1",
-        "date-fns": "^4.1.0",
-        "depcheck": "^1.4.7",
-        "dotenv-cli": "^7.4.4",
-        "emailjs": "^4.0.3",
-        "envsub": "^4.1.0",
-        "esbuild": "^0.25.4",
-        "eslint": "^9.26.0",
-        "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-astro": "^1.3.1",
-        "eslint-plugin-format": "^1.0.1",
-        "eslint-plugin-html": "^8.1.2",
-        "eslint-plugin-prettier": "^5.2.3",
-        "eslint-plugin-react": "7.37.5",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.20",
-        "eslint-plugin-svelte": "^3.5.1",
-        "eslint-plugin-tailwindcss": "^3.18.0",
-        "eslint-plugin-toml": "^0.12.0",
-        "flowbite-svelte": "^0.48.6",
-        "glob": "^11.0.2",
-        "globals": "^16.1.0",
-        "graphql": "^16.11.0",
-        "graphql-codegen-svelte-apollo": "^1.1.0",
-        "graphql-tag": "^2.12.6",
-        "husky": "^9.1.7",
-        "inquirer": "^10.2.2",
-        "jsdom": "~24.1.3",
-        "nx": "20.4.6",
-        "pino-pretty": "^11.3.0",
-        "postcss": "8.5.3",
-        "prettier": "^3.5.3",
-        "prettier-plugin-astro": "^0.14.1",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "replace-in-files-cli": "^3.0.0",
-        "rimraf": "^6.0.1",
-        "schema-dts": "^1.1.5",
-        "secretlint": "^8.2.4",
-        "simple-git": "^3.27.0",
-        "stream-browserify": "^3.0.0",
-        "svelte": "^5.28.2",
-        "svelte-apollo": "^0.5.0",
-        "svelte-check": "^4.1.7",
-        "svelte-infinite-scroll": "^2.0.1",
-        "tailwindcss": "3.4.17",
-        "tsx": "^4.19.4",
-        "typedoc": "0.27.9",
-        "typedoc-plugin-markdown": "^4.4.2",
-        "typescript": "5.7.3",
-        "vite": "^6.2.2",
-        "vitepress": "1.3.2",
-        "vitest": "^2.1.9",
-        "wrangler": "^3.76.0",
-        "yaml": "^2.5.1"
-    },
-    "trustedDependencies": [
-        "@parcel/watcher",
-        "@swc/core",
-        "svelte-preprocess"
-    ]
+  "name": "monorepo",
+  "type": "module",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Monorepo of Justin Konratt",
+  "author": {
+    "name": "Justin Konratt",
+    "email": "codesdowork@gmail.com",
+    "url": "https://github.com/CodesDoWork"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/CodesDoWork/monorepo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CodesDoWork/monorepo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CodesDoWork/monorepo/issues",
+    "email": "codesdowork@gmail.com"
+  },
+  "keywords": [
+    "nx",
+    "monorepo",
+    "codesdowork"
+  ],
+  "scripts": {
+    "docker:build-workspace": "nx run-many -t docker-build -p workspace-base workspace workspace-deps --parallel 1 --nxBail --output-style stream",
+    "docker:workspace": "nx docker-compose-up workspace",
+    "secretlint": "secretlint --secretlintignore .gitignore \"**/*\"",
+    "trivy": "tsx packages/workspace/scripts/src/trivy-analyze-fs.ts"
+  },
+  "dependencies": {
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@nx/devkit": "22.0.1",
+    "@parcel/watcher": "^2.5.1",
+    "@swc/helpers": "0.5.17",
+    "@t3-oss/env-core": "^0.11.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "axios": "^1.7.4",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "color": "^4.2.3",
+    "dotenv": "^16.4.7",
+    "encoding": "^0.1.13",
+    "iconify-icon": "^2.3.0",
+    "mermaid": "~9.1.7",
+    "moment": "^2.30.1",
+    "pino": "^9.4.0",
+    "tslib": "^2.6.3",
+    "vitepress-plugin-auto-sidebar": "^1.2.0",
+    "vitepress-plugin-mermaid": "2.0.17",
+    "vue": "^3.4.38",
+    "xmlbuilder2": "^3.1.1",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.13.0",
+    "@apollo/client": "^3.13.8",
+    "@astrojs/tailwind": "^5.1.5",
+    "@cloudflare/kv-asset-handler": "^0.3.4",
+    "@cloudflare/workers-types": "^4.20250510.0",
+    "@directus/extensions-sdk": "^12.1.4",
+    "@directus/types": "^12.2.2",
+    "@graphql-codegen/cli": "^5.0.6",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@graphql-codegen/plugin-helpers": "^5.1.0",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
+    "@iconify/svelte": "^4.2.0",
+    "@nx/esbuild": "22.0.1",
+    "@nx/eslint": "22.0.1",
+    "@nx/eslint-plugin": "22.0.1",
+    "@nx/js": "22.0.1",
+    "@nx/node": "22.0.1",
+    "@nx/plugin": "22.0.1",
+    "@nx/vite": "22.0.1",
+    "@nx/web": "22.0.1",
+    "@nx/workspace": "22.0.1",
+    "@prettier/plugin-xml": "^3.4.1",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.2.4",
+    "@sveltejs/adapter-node": "^5.2.12",
+    "@sveltejs/kit": "^2.20.8",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@swc-node/register": "1.10.10",
+    "@swc/cli": "0.6.0",
+    "@swc/core": "1.11.24",
+    "@testing-library/react": "16.3.0",
+    "@types/color": "^4.2.0",
+    "@types/eslint-plugin-tailwindcss": "^3.17.0",
+    "@types/node": "^22.15.17",
+    "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.15.1",
+    "@typescript-eslint/parser": "8.46.2",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
+    "astro": "^4.16.18",
+    "autoprefixer": "^10.4.21",
+    "chalk": "4.1.2",
+    "copyfiles": "^2.4.1",
+    "date-fns": "^4.1.0",
+    "depcheck": "^1.4.7",
+    "dotenv-cli": "^7.4.4",
+    "emailjs": "^4.0.3",
+    "envsub": "^4.1.0",
+    "esbuild": "^0.25.4",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-svelte": "^3.5.1",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "eslint-plugin-toml": "^0.12.0",
+    "flowbite-svelte": "^0.48.6",
+    "glob": "^11.0.2",
+    "globals": "^16.1.0",
+    "graphql": "^16.11.0",
+    "graphql-codegen-svelte-apollo": "^1.1.0",
+    "graphql-tag": "^2.12.6",
+    "husky": "^9.1.7",
+    "inquirer": "^10.2.2",
+    "jiti": "2.4.2",
+    "jsdom": "~24.1.3",
+    "nx": "22.0.1",
+    "pino-pretty": "^11.3.0",
+    "postcss": "8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "replace-in-files-cli": "^3.0.0",
+    "rimraf": "^6.0.1",
+    "schema-dts": "^1.1.5",
+    "secretlint": "^8.2.4",
+    "simple-git": "^3.27.0",
+    "stream-browserify": "^3.0.0",
+    "svelte": "^5.28.2",
+    "svelte-apollo": "^0.5.0",
+    "svelte-check": "^4.1.7",
+    "svelte-infinite-scroll": "^2.0.1",
+    "tailwindcss": "3.4.17",
+    "tsx": "^4.19.4",
+    "typedoc": "0.27.9",
+    "typedoc-plugin-markdown": "^4.4.2",
+    "typescript": "5.9.3",
+    "vite": "7.1.9",
+    "vitepress": "1.3.2",
+    "vitest": "^2.1.9",
+    "wrangler": "^3.76.0",
+    "yaml": "^2.5.1"
+  },
+  "trustedDependencies": [
+    "@parcel/watcher",
+    "@swc/core",
+    "esbuild",
+    "nx",
+    "sharp",
+    "svelte-preprocess",
+    "unrs-resolver",
+    "vue-demi",
+    "workerd"
+  ]
 }
