--- a/nx.json
+++ b/nx.json
@@ -72,6 +72,9 @@
             "plugin": "@cdw/monorepo/nx-plugins-vitest"
         },
         {
+            "plugin": "@cdw/monorepo/nx-plugins-workspace"
+        },
+        {
             "plugin": "@cdw/monorepo/nx-plugins-wrangler"
         },
         {
