fix(just-documentation): update typedoc to work with package mode

--- a/packages/just/documentation/project.json
+++ b/packages/just/documentation/project.json
@@ -6,10 +6,7 @@
         "pre-build": {
             "executor": "nx:run-commands",
             "options": {
-                "commands": [
-                    "typedoc --plugin typedoc-plugin-markdown --cleanOutputDir --name monorepo --out ./packages/just/documentation/docs/project/code-docs --exclude **/eslint.config.js --entryPointStrategy expand packages",
-                    "copyfiles -a -e \"./node_modules/**/*.md\" -e \"./packages/just/documentation/docs/**/*.md\" \"./**/*.md\" ./packages/just/documentation/docs/project/"
-                ]
+                "commands": ["typedoc --out ./packages/just/documentation/docs/project"]
             }
         }
     },
