fix(just-nginx): make sonar private and increase mail body size

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -206,6 +206,7 @@ server {
     }
 
     location / {
+        client_max_body_size 1G;
         set $upstream mail:$mail_port;
         proxy_pass http://$upstream;
     }
@@ -345,6 +346,10 @@ server {
     listen [::]:443 ssl;
     http2 on;
     server_name sonar.justinkonratt.de;
+
+    if ($is_private_ip = false) {
+        return 403;
+    }
 
     location / {
         gzip off;
