--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@swc/helpers": "0.5.17",
         "@t3-oss/env-core": "^0.13.8",
         "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/vite": "^4.1.17",
         "axios": "^1.12.2",
         "classnames": "^2.5.1",
         "clsx": "^2.1.1",
@@ -108,6 +109,7 @@
         "eslint": "^9.39.1",
         "eslint-config-prettier": "10.1.8",
         "eslint-plugin-astro": "^1.5.0",
+        "eslint-plugin-better-tailwindcss": "^3.7.11",
         "eslint-plugin-format": "^1.0.2",
         "eslint-plugin-html": "^8.1.3",
         "eslint-plugin-prettier": "^5.5.4",
@@ -115,7 +117,6 @@
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
         "eslint-plugin-svelte": "^3.13.0",
-        "eslint-plugin-tailwindcss": "^3.18.2",
         "eslint-plugin-toml": "^0.12.0",
         "flowbite-svelte": "^1.28.1",
         "glob": "^11.1.0",
@@ -142,7 +143,7 @@
         "svelte-apollo": "^0.5.0",
         "svelte-check": "^4.3.4",
         "svelte-infinite-scroll": "^2.0.1",
-        "tailwindcss": "3.4.18",
+        "tailwindcss": "^4.1.17",
         "tsx": "^4.20.6",
         "typedoc": "0.28.14",
         "typedoc-plugin-markdown": "^4.9.0",
