--- a/packages/just/website/package.json
+++ b/packages/just/website/package.json
@@ -2,5 +2,8 @@
     "name": "just-website",
     "type": "module",
     "private": true,
-    "description": "This app contains my personal website"
+    "description": "This app contains my personal website",
+    "imports": {
+        "#app.css": "./src/app.css"
+    }
 }
