feat(just-prometheus): add dynamic config with env vars

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -17,6 +17,7 @@ env:
   PROMETHEUS_PORT: 9090
   SONARQUBE_PORT: 9000
 
+  MUSIC_METADATA_PORT: 8338
   MUSIC_VOLUME: /home/jkonratt/music
 
   TZ: Europe/Berlin
@@ -168,6 +169,7 @@ secrets:
       - PORT
       - PASSWORD_ENCRYPTION_KEY
       - AUTH_USERNAME_HEADER
+      - PROMETHEUS_METRICS_PATH_SECRET
 
   nginx:
     prefix: true
