--- a/packages/just/prometheus/Dockerfile
+++ b/packages/just/prometheus/Dockerfile
@@ -1,6 +1,14 @@
 ARG DOCKER_PROXY
 
-FROM $DOCKER_PROXY/prom/prometheus:v2.54.1
+
+FROM $DOCKER_PROXY/alpine:3.22 AS builder
 ARG APP_DIR=just/prometheus
 
-COPY /packages/$APP_DIR/prometheus.yaml /etc/prometheus/prometheus.yml
+WORKDIR /app
+RUN apk add envsubst
+COPY packages/$APP_DIR/prometheus.yaml packages/$APP_DIR/.env ./
+RUN export $(cat .env) && envsubst < prometheus.yaml > ./prometheus-ready.yaml
+
+
+FROM $DOCKER_PROXY/prom/prometheus:v2.54.1
+COPY --from=builder /app/prometheus-ready.yaml /etc/prometheus/prometheus.yml
