--- a/packages/just/prometheus/prometheus.yaml
+++ b/packages/just/prometheus/prometheus.yaml
@@ -1,68 +1,26 @@
-# my global config
 global:
-  scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
-# Alertmanager configuration
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets:
-        # - alertmanager:9093
-
-# Load rules once and periodically evaluate them according to the global "evaluation_interval".
 rule_files:
-# - "first_rules.yml"
-# - "second_rules.yml"
 
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it"s Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: prometheus
-
-    # metrics_path defaults to "/metrics"
-    # scheme defaults to "http".
-
     static_configs:
       - targets: ["localhost:9090"]
-
-  # ################################################################################################
 
   - job_name: netdata
     metrics_path: /api/v1/allmetrics
     params:
-      # format: prometheus | prometheus_all_hosts
-      # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
       format: [prometheus]
-      #
-      # source: as-collected | raw | average | sum | volume
-      # default is: average
-      # source: [as-collected]
-      #
-      # server name for this prometheus - the default is the client IP
-      # for Netdata to uniquely identify it
-      # server: ["prometheus1"]
     honor_labels: true
     static_configs:
       - targets: ["host.docker.internal:19999"]
-  # ################################################################################################
 
   - job_name: gitlab
     metrics_path: /-/metrics
     params:
-      # format: prometheus | prometheus_all_hosts
-      # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
       format: [prometheus]
-      #
-      # source: as-collected | raw | average | sum | volume
-      # default is: average
-      # source: [as-collected]
-      #
-      # server name for this prometheus - the default is the client IP
-      # for Netdata to uniquely identify it
-      # server: ["prometheus1"]
     honor_labels: true
     static_configs:
       - targets: [gitlab]
@@ -73,5 +31,9 @@ scrape_configs:
       format: [prometheus]
     honor_labels: true
     static_configs:
-      - targets: [mlflow]
-# ################################################################################################
+      - targets: ["mlflow:${MLFLOW_PORT}"]
+
+  - job_name: navidrome
+    metrics_path: /metrics_${MUSIC_PLATFORM_PROMETHEUS_METRICS_PATH_SECRET}
+    static_configs:
+      - targets: ["navidrome:${MUSIC_PLATFORM_PORT}"]
