feat(just-nginx): add authentication roles and music metadata service

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -229,6 +229,47 @@ server {
 }
 
 server {
+    set_by_lua_block $music_downloader_port { return os.getenv("MUSIC_DOWNLOADER_PORT"); }
+
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name music-downloader.justinkonratt.de;
+
+    if ($is_private_ip = false) {
+        return 403;
+    }
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream music-downloader:$music_downloader_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
+    set_by_lua_block $music_metadata_port { return os.getenv("MUSIC_METADATA_PORT"); }
+
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name music-meta.justinkonratt.de;
+
+    if ($is_private_ip = false) {
+        return 403;
+    }
+
+    set $required_role "just-music-metadata-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream music-metadata:$music_metadata_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $music_platform_port { return os.getenv("MUSIC_PLATFORM_PORT"); }
 
     listen 443 ssl;
@@ -254,26 +295,6 @@ server {
         gzip off;
         access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
     	set $upstream music-platform:$music_platform_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
-    set_by_lua_block $music_downloader_port { return os.getenv("MUSIC_DOWNLOADER_PORT"); }
-
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    http2 on;
-    server_name music-downloader.justinkonratt.de;
-
-    if ($is_private_ip = false) {
-        return 403;
-    }
-
-    access_by_lua_file /etc/nginx/lua/access.lua;
-
-    location / {
-        set $upstream music-downloader:$music_downloader_port;
         proxy_pass http://$upstream;
     }
 }
