--- a/packages/just/nginx/envs.conf
+++ b/packages/just/nginx/envs.conf
@@ -29,10 +29,12 @@ env MAIL_HTTP_PORT;
 env MLFLOW_PORT;
 env MLFLOW_API_KEY;
 
+env MUSIC_DOWNLOADER_PORT;
+
+env MUSIC_METADATA_PORT;
+
 env MUSIC_PLATFORM_PORT;
 env MUSIC_PLATFORM_AUTH_USERNAME_HEADER;
-
-env MUSIC_DOWNLOADER_PORT;
 
 env NETDATA_PORT;
 
