--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -414,6 +414,21 @@ services:
     volumes:
       - ${MUSIC_VOLUME}/downloads:/music/downloads
 
+  music-metadata:
+    <<: *common
+    environment:
+      - PORT=${MUSIC_METADATA_PORT}
+    healthcheck:
+      test:
+        ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${PORT}/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    image: ghcr.io/wow-signal-dev/metadata-remote:1.2.0
+    volumes:
+      - ${MUSIC_VOLUME}:/music
+
   music-platform:
     <<: *common
     environment:
@@ -424,6 +439,8 @@ services:
       - ND_ENABLECOVERANIMATION=false
       - ND_ENABLESTARRATING=false
       - ND_LASTFM_ENABLED=false
+      - ND_PROMETHEUS_ENABLED=true
+      - ND_PROMETHEUS_METRICSPATH=/metrics_{MUSIC_PLATFORM_PROMETHEUS_METRICS_PATH_SECRET}
       - ND_PASSWORDENCRYPTIONKEY=${MUSIC_PLATFORM_PASSWORD_ENCRYPTION_KEY}
       - ND_SCANSCHEDULE=1h
       - ND_SESSIONTIMEOUT=720h
