--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -87,6 +87,7 @@ server {
     http2 on;
     server_name dashboard.justinkonratt.de;
 
+    set $required_role "just-dashboard-access";
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -220,6 +221,7 @@ server {
     http2 on;
     server_name mlflow.justinkonratt.de;
 
+    set $required_role "just-mlflow-access";
     access_by_lua_file /etc/nginx/lua/mlflow-access.lua;
 
     location / {
@@ -240,6 +242,7 @@ server {
         return 403;
     }
 
+    set $required_role "just-music-downloader-access";
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -278,10 +281,12 @@ server {
     server_name music.justinkonratt.de;
 
     location /callback-auth {
+        set $required_role "just-music-platform-access";
         access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
     }
 
     location /callback-logout {
+        set $required_role "just-music-platform-access";
         access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
     }
 
@@ -293,6 +298,7 @@ server {
 
     location / {
         gzip off;
+        set $required_role "just-music-platform-access";
         access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
     	set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
@@ -312,6 +318,7 @@ server {
         return 403;
     }
 
+    set $required_role "just-netdata-access";
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -352,6 +359,7 @@ server {
         return 403;
     }
 
+    set $required_role "just-prometheus-access";
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -410,6 +418,7 @@ server {
             return 403;
         }
 
+        set $required_role "just-website-private-access";
         access_by_lua_file /etc/nginx/lua/access.lua;
 
         set $upstream website:$website_port;
@@ -417,6 +426,7 @@ server {
     }
 
     location /callback-auth {
+        set $required_role "just-website-private-access";
         access_by_lua_file /etc/nginx/lua/access.lua;
     }
 
