feat(just-nginx): protect all frontends via keycloak roles

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -27,6 +27,9 @@ server {
         return 403;
     }
 
+    set $required_role "just-adminer-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
     location / {
         set $upstream adminer:$adminer_port;
         proxy_pass http://$upstream;
@@ -72,9 +75,20 @@ server {
     http2 on;
     server_name cms.justinkonratt.de;
 
+    client_max_body_size 100M;
+    set $upstream cms:$cms_port;
+    set $required_role "just-cms-access";
+
+    location /callback-auth {
+        access_by_lua_file /etc/nginx/lua/access.lua;
+    }
+
+    location /admin {
+        access_by_lua_file /etc/nginx/lua/access.lua;
+        proxy_pass http://$upstream;
+    }
+
     location / {
-        client_max_body_size 100M;
-        set $upstream cms:$cms_port;
         proxy_pass http://$upstream;
     }
 }
@@ -107,6 +121,9 @@ server {
     if ($is_private_ip = false) {
         return 403;
     }
+
+    set $required_role "just-dns-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         set $upstream dns:$dns_web_port;
@@ -148,6 +165,9 @@ server {
         return 403;
     }
 
+    set $required_role "just-documentation-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
     location / {
         set $upstream documentation:$documentation_port;
         proxy_pass http://$upstream;
@@ -166,12 +186,19 @@ server {
         return 403;
     }
 
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-Protocol https;
+    proxy_set_header Host $host;
+    client_max_body_size 100M;
+    set $upstream gitlab:$gitlab_port;
+    set $required_role "just-gitlab-access";
+
+    location /api {
+        proxy_pass http://$upstream;
+    }
+
     location / {
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-Protocol https;
-        proxy_set_header Host $host;
-        client_max_body_size 100M;
-        set $upstream gitlab:$gitlab_port;
+        access_by_lua_file /etc/nginx/lua/access.lua;
         proxy_pass http://$upstream;
     }
 }
@@ -187,6 +214,9 @@ server {
     if ($is_private_ip = false) {
         return 403;
     }
+
+    set $required_role "just-grafana-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         set $upstream grafana:$grafana_port;
@@ -205,6 +235,9 @@ server {
     if ($is_private_ip = false) {
         return 403;
     }
+
+    set $required_role "just-mail-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         client_max_body_size 1G;
@@ -280,27 +313,17 @@ server {
     http2 on;
     server_name music.justinkonratt.de;
 
-    location /callback-auth {
-        set $required_role "just-music-platform-access";
-        access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
-    }
-
-    location /callback-logout {
-        set $required_role "just-music-platform-access";
-        access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
-    }
+    set $upstream music-platform:$music_platform_port;
+    set $required_role "just-music-platform-access";
 
     location /rest {
         gzip off;
-        set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
     }
 
     location / {
         gzip off;
-        set $required_role "just-music-platform-access";
         access_by_lua_file /etc/nginx/lua/music-platform-access.lua;
-    	set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
     }
 }
@@ -339,6 +362,9 @@ server {
     if ($is_private_ip = false) {
         return 403;
     }
+
+    set $required_role "just-portainer-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         gzip off;
@@ -380,9 +406,17 @@ server {
         return 403;
     }
 
+    set $upstream sonarqube:$sonarqube_port;
+    set $required_role "just-sonarqube-access";
+
+    location /api {
+        gzip off;
+        proxy_pass http://$upstream;
+    }
+
     location / {
         gzip off;
-        set $upstream sonarqube:$sonarqube_port;
+        access_by_lua_file /etc/nginx/lua/access.lua;
         proxy_pass http://$upstream;
     }
 }
@@ -399,6 +433,9 @@ server {
         return 403;
     }
 
+    set $required_role "just-vpn-access";
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
     location / {
         set $upstream vpn:$vpn_port;
         proxy_pass http://$upstream;
@@ -413,25 +450,23 @@ server {
     http2 on;
     server_name justinkonratt.de;
 
+    set $upstream website:$website_port;
+    set $required_role "just-website-private-access";
+
     location /private/ {
         if ($is_private_ip = false) {
             return 403;
         }
 
-        set $required_role "just-website-private-access";
         access_by_lua_file /etc/nginx/lua/access.lua;
-
-        set $upstream website:$website_port;
         proxy_pass http://$upstream;
     }
 
     location /callback-auth {
-        set $required_role "just-website-private-access";
         access_by_lua_file /etc/nginx/lua/access.lua;
     }
 
     location / {
-        set $upstream website:$website_port;
         proxy_pass http://$upstream;
     }
 }
