--- a/packages/just/nginx/envs.conf
+++ b/packages/just/nginx/envs.conf
@@ -40,6 +40,7 @@ env NETDATA_PORT;
 
 env NGINX_AUTH_CLIENT_ID;
 env NGINX_AUTH_CLIENT_SECRET;
+env NGINX_AUTH_SESSION_SECRET;
 
 env PORTAINER_PORT;
 
