--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -429,6 +429,7 @@ services:
           "--no-verbose",
           "--tries=1",
           "--spider",
+          "--header='Connection: close'",
           "http://localhost:${MUSIC_METADATA_PORT}/health",
         ]
       interval: 30s
