feat(zinzow-website): add mail functionality

--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -21,6 +21,15 @@ secrets:
       - USERNAME
       - PASSWORD
 
+  smtp:
+    prefix: true
+    vars:
+      - USERNAME
+      - PASSWORD
+      - HOST
+      - PORT
+      - TO
+
   ssh:
     prefix: true
     vars:
