--- a/packages/zinzow/website/.env.secure.yaml
+++ b/packages/zinzow/website/.env.secure.yaml
@@ -15,3 +15,12 @@ secrets:
     vars:
       - DOMAIN
       - URL
+
+  ../smtp:
+    prefix: true
+    vars:
+      - USERNAME
+      - PASSWORD
+      - HOST
+      - PORT
+      - TO
