--- a/packages/zinzow/docker-compose.yaml
+++ b/packages/zinzow/docker-compose.yaml
@@ -23,6 +23,11 @@ services:
       - DB_USER=${POSTGRES_USERNAME}
       - DB_PASSWORD=${POSTGRES_PASSWORD}
       - WEBSOCKETS_ENABLED=true
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_USERNAME=${SMTP_USERNAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - SMTP_TO=${SMTP_TO}
     image: ${DOCKER_PROXY}/directus/directus:11
     volumes:
       - directus-uploads:/directus/uploads
