feat(zinzow-website): add seo

--- a/packages/just/website/tsconfig.json
+++ b/packages/just/website/tsconfig.json
@@ -13,7 +13,8 @@
         "src/**/*.svelte",
         ".svelte-kit/ambient.d.ts",
         ".svelte-kit/non-ambient.d.ts",
-        ".svelte-kit/types/**/$types.d.ts"
+        ".svelte-kit/types/**/$types.d.ts",
+        "../../shared/utils/src/svelte/contexts/jsonld.ts"
     ],
     "exclude": ["**/generated/*"]
 }
