--- a/nx.json
+++ b/nx.json
@@ -55,6 +55,9 @@
             "plugin": "@cdw/monorepo/nx-plugins-docker-compose"
         },
         {
+            "plugin": "@cdw/monorepo/nx-plugins-latex"
+        },
+        {
             "plugin": "@cdw/monorepo/nx-plugins-lighthouse"
         },
         {
