--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
             "@cdw/monorepo/nx-plugins-docker-compose": [
                 "packages/nx-plugins/docker-compose/src/index.ts"
             ],
+            "@cdw/monorepo/nx-plugins-latex": ["packages/nx-plugins/latex/src/index.ts"],
             "@cdw/monorepo/nx-plugins-lighthouse": ["packages/nx-plugins/lighthouse/src/index.ts"],
             "@cdw/monorepo/nx-plugins-secrets-manager": [
                 "packages/nx-plugins/secrets-manager/src/index.ts"
