--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "https-sonar-justinkonratt-com",
         "projectKey": "codesdowork_monorepo"
-    }
+    },
+    "latex-workshop.latex.autoBuild.run": "never",
+    "ltex.language": "auto"
 }
