--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -11,7 +11,7 @@ x-common: &common
 services:
   adminer:
     <<: *common
-    image: ${DOCKER_PROXY}/adminer:4.8.1
+    image: ${DOCKER_PROXY}/adminer:5.4.1
 
   bitwarden:
     <<: *common
@@ -31,7 +31,7 @@ services:
       - SMTP_SECURITY=starttls
       - SMTP_USERNAME=${SMTP_USERNAME}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
-    image: ${DOCKER_PROXY}/vaultwarden/server:1.32.0-alpine
+    image: ${DOCKER_PROXY}/vaultwarden/server:1.35.1-alpine
     volumes:
       - bitwarden-data:/data
 
@@ -70,7 +70,7 @@ services:
     command: daemon --docker
     environment:
       - TZ=${TZ}
-    image: ${DOCKER_PROXY}/mcuadros/ofelia:0.3.13
+    image: ${DOCKER_PROXY}/mcuadros/ofelia:0.3.20
     labels:
       ofelia.enabled: true
 
@@ -103,7 +103,6 @@ services:
           "${STACK_NAME}_netdata-config:/data/services/netdata/config:ro",
           "${STACK_NAME}_netdata-lib:/data/services/netdata/lib:ro",
           "${STACK_NAME}_pihole-etc:/data/services/pihole/etc:ro",
-          "${STACK_NAME}_pihole-dnsmasq:/data/services/pihole/dnsmasq:ro",
           "${STACK_NAME}_portainer-data:/data/services/portainer/data:ro",
           "${STACK_NAME}_postgres-data:/data/services/postgres/data:ro",
           "${STACK_NAME}_sonarqube-config:/data/services/sonarqube/config:ro",
@@ -156,7 +155,7 @@ services:
       - NODE_ENV=production
     healthcheck:
       test: node /app/services/healthcheck
-    image: ${DOCKER_PROXY}/lissy93/dashy:3.1.0
+    image: ${DOCKER_PROXY}/lissy93/dashy:3.1.1
     volumes:
       - dashy-config:/app/user-data:ro
 
@@ -171,11 +170,14 @@ services:
       - CAP_SETFCAP
       - CAP_SETGID
       - CAP_SETUID
-    image: ${IMAGE_BASE}/just-dns:${PROJECT_VERSION:-latest}
+    image: ${DOCKER_PROXY}/pihole/pihole:2025.11.1
     environment:
-      - TZ=${TZ}
-      - WEBPASSWORD=${DNS_PASSWORD}
-      - FTLCONF_LOCAL_IPV4=${DNS_IP}
+      TZ: ${TZ}
+      FTLCONF_webserver_api_password: ${DNS_PASSWORD}
+      FTLCONF_dns_listeningMode: all
+      FTLCONF_misc_dnsmasq_lines: >-
+        address=/${DOMAIN}/${NGINX_IP}; server=/agrarservicenordost-test.${DOMAIN}/1.1.1.1;
+        server=/cms-agrarservicenordost-test.${DOMAIN}/1.1.1.1;
     networks:
       default:
         ipv4_address: ${DNS_IP}
@@ -183,7 +185,6 @@ services:
       - 127.0.0.1:53:53/udp
     volumes:
       - pihole-etc:/etc/pihole
-      - pihole-dnsmasq:/etc/dnsmasq.d
 
   documentation:
     <<: *common
@@ -255,7 +256,7 @@ services:
             }
           }
         ]
-    image: ${DOCKER_PROXY}/zengxs/gitlab:17.5.1-ee
+    image: ${DOCKER_PROXY}/zengxs/gitlab:18.2.1-ee
     restart: always
     volumes:
       - gitlab-config:/etc/gitlab
@@ -277,7 +278,7 @@ services:
       - DOCKER_PRIVILEGED=true
       - CI_SERVER_URL=http://gitlab
       - CI_SERVER_TOKEN=${GITLAB_RUNNER_TOKEN}
-    image: ${DOCKER_PROXY}/gitlab/gitlab-runner:v17.3.1
+    image: ${DOCKER_PROXY}/gitlab/gitlab-runner:v18.7.1
     volumes:
       - //var/run/docker.sock:/var/run/docker.sock
 
@@ -290,7 +291,7 @@ services:
       - GF_SMTP_PASSWORD=${SMTP_PASSWORD}
     healthcheck:
       test: curl -fs http://localhost:${GRAFANA_PORT}/api/health | grep "ok" || exit 1
-    image: ${DOCKER_PROXY}/grafana/grafana:11.2.0
+    image: ${DOCKER_PROXY}/grafana/grafana:12.4.0
     volumes:
       - grafana-storage:/var/lib/grafana
       - grafana-config:/usr/share/grafana/conf
@@ -303,16 +304,15 @@ services:
       - --db-url-host=${DB_NAME}
       - --db-username=${POSTGRES_USERNAME}
       - --db-password=${POSTGRES_PASSWORD}
-      - --hostname-strict=false
+      - --hostname=${KEYCLOAK_DOMAIN}
       - --http-enabled=true
       - --health-enabled=true
       - --metrics-enabled=true
-      - --features=docker,token-exchange
-      - --proxy=edge
+      - --proxy-headers=xforwarded
     environment:
       - KEYCLOAK_ADMIN=${KEYCLOAK_USERNAME}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_PASSWORD}
-    image: ${DOCKER_PROXY}/keycloak/keycloak:25.0.2
+    image: ${DOCKER_PROXY}/keycloak/keycloak:26.4.7
 
   mail:
     environment:
@@ -463,7 +463,7 @@ services:
     cap_add:
       - SYS_PTRACE
       - SYS_ADMIN
-    image: ${DOCKER_PROXY}/netdata/netdata:v1.47.1
+    image: ${DOCKER_PROXY}/netdata/netdata:v2.8.4
     network_mode: host
     restart: always
     security_opt:
@@ -498,7 +498,7 @@ services:
 
   portainer:
     <<: *common
-    image: ${DOCKER_PROXY}/portainer/portainer-ce:2.21.1-alpine
+    image: ${DOCKER_PROXY}/portainer/portainer-ce:2.33.6-alpine
     volumes:
       - portainer-data:/data
       - //var/run/docker.sock:/var/run/docker.sock
@@ -515,7 +515,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
       test: pg_isready -U $POSTGRES_USERNAME
-    image: ${DOCKER_PROXY}/postgres:15-alpine
+    image: ${DOCKER_PROXY}/postgres:18.1-alpine3.23
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
@@ -539,7 +539,7 @@ services:
       test:
         wget -qO- http://localhost:9000/api/system/status | grep -q -e '"status":"UP"' -e
         '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"' || exit 1
-    image: ${DOCKER_PROXY}/sonarqube:10-community
+    image: ${DOCKER_PROXY}/sonarqube:25.12.0.117093-community
     volumes:
       - sonarqube-config:/opt/sonarqube/conf
       - sonarqube-data:/opt/sonarqube/data
@@ -553,7 +553,7 @@ services:
       - run
       - --token
       - ${TUNNEL_TOKEN}
-    image: ${DOCKER_PROXY}/cloudflare/cloudflared:2024.9.1
+    image: ${DOCKER_PROXY}/cloudflare/cloudflared:2025.11.1
     networks:
       default:
         ipv4_address: ${TUNNEL_IP}
@@ -565,12 +565,10 @@ services:
       - NET_RAW
       - SYS_MODULE
     environment:
-      - WG_HOST=${SERVER_ADDRESS}
-      - WG_DEFAULT_DNS=${DNS_IP}
       - PORT=${VPN_PORT}
-      - PASSWORD_HASH=${VPN_PASSWORD_HASH}
-      - UI_TRAFFIC_STATS=true
-    image: ghcr.io/wg-easy/wg-easy:14
+      - INSECURE=true
+      - DISABLE_IPV6=true
+    image: ghcr.io/wg-easy/wg-easy:15.1.0
     ports:
       - 51820:51820/udp
     sysctls:
@@ -578,6 +576,7 @@ services:
       - net.ipv4.ip_forward=1
     volumes:
       - vpn-data:/etc/wireguard
+      - /lib/modules:/lib/modules:ro
 
   website:
     <<: *common
@@ -626,7 +625,6 @@ volumes:
   netdata-cache:
 
   pihole-etc:
-  pihole-dnsmasq:
 
   portainer-data:
 
