--- a/packages/just/mail/Dockerfile
+++ b/packages/just/mail/Dockerfile
@@ -22,9 +22,12 @@ RUN apt-get update && \
     apt-get update && \
     apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
+# mandatory dependencies
+RUN apt-get install -y jq
+
 COPY --chmod=555 packages/$APP_DIR/entrypoint.sh /
 COPY --chmod=555 packages/$APP_DIR/cp_certs.sh /
-RUN git clone https://github.com/mailcow/mailcow-dockerized --branch 2025-03b /opt/$APP_DIR
+RUN git clone https://github.com/mailcow/mailcow-dockerized --branch 2025-12a /opt/$APP_DIR
 
 WORKDIR /opt/$APP_DIR
 RUN cp -r data/assets/ssl-example/ data/assets/ssl/
