--- a/packages/shared/mlflow/Dockerfile
+++ b/packages/shared/mlflow/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.10-slim
+FROM python:3.12.12-slim
 
-RUN pip install mlflow==2.21.3 psycopg2-binary==2.9.10
+RUN pip install mlflow==3.8.1
 
 SHELL ["bash"]
 ENTRYPOINT [ "mlflow", "server" ]
