--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -10,7 +10,6 @@ env:
   ADMINER_PORT: 8080
   DOCKER_REGISTRY_PORT: 5005
   DOCUMENTATION_PORT: 80
-  GRAFANA_PORT: 3000
   MUSIC_DOWNLOADER_PORT: 4200
   NETDATA_PORT: 19999
   PORTAINER_PORT: 9000
@@ -93,6 +92,14 @@ secrets:
     prefix: true
     vars:
       - TOKEN
+
+  grafana:
+    prefix: true
+    vars:
+      - DOMAIN
+      - PORT
+      - AUTH_CLIENT_ID
+      - AUTH_CLIENT_SECRET
 
   keycloak:
     prefix: true
