--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -137,7 +137,7 @@ sonarqube:
   stage: lint
   cache: []
   image:
-    name: ${DOCKER_PROXY}/sonarsource/sonar-scanner-cli:11.1
+    name: ${DOCKER_PROXY}/sonarsource/sonar-scanner-cli:12.0.0.3214_8.0.1
     entrypoint: [""]
   script:
     - sonar-scanner
