--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -407,6 +407,11 @@ server {
         proxy_pass http://$upstream;
     }
 
+    location /batch {
+        gzip off;
+        proxy_pass http://$upstream;
+    }
+
     location / {
         gzip off;
         access_by_lua_file /etc/nginx/lua/access.lua;
