--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ vitest.config.*.timestamp*
 /.direnv
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+
+# sonar
+/.scannerwork
