--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "@nx/workspace": "22.3.3",
         "@prettier/plugin-xml": "^3.4.2",
         "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
+        "@sonar/scan": "^4.3.2",
         "@sveltejs/adapter-node": "5.4.0",
         "@sveltejs/kit": "2.49.2",
         "@sveltejs/vite-plugin-svelte": "6.2.1",
