feat(just-music-store): finish music store v1

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -17,7 +17,6 @@ env:
   SONARQUBE_PORT: 9000
 
   MUSIC_METADATA_PORT: 8338
-  MUSIC_VOLUME: /home/jkonratt/music
 
   TZ: Europe/Berlin
 secrets:
@@ -170,6 +169,12 @@ secrets:
       - PORT
       - API_KEY
 
+  music:
+    prefix: true
+    vars:
+      - DIR_PATH
+      - LIBRARY_PATH
+
   music/platform:
     prefix: true
     vars:
@@ -177,6 +182,12 @@ secrets:
       - PASSWORD_ENCRYPTION_KEY
       - AUTH_USERNAME_HEADER
       - PROMETHEUS_METRICS_PATH_SECRET
+
+  music/store:
+    prefix: true
+    vars:
+      - MUSIC_STORE_DIR
+      - MUSIC_LIB_DIRS
 
   nginx:
     prefix: true
