--- a/packages/just/music/store/tsconfig.json
+++ b/packages/just/music/store/tsconfig.json
@@ -1,13 +1,7 @@
 {
     "extends": "../../../../tsconfig.json",
-    "files": [],
-    "include": [],
-    "references": [
-        {
-            "path": "./tsconfig.app.json"
-        }
-    ],
     "compilerOptions": {
-        "esModuleInterop": true
-    }
+        "types": ["node"]
+    },
+    "include": ["src/**/*.ts"]
 }
